식단분석 수정(음식마다 각 영양소분석 기능 추가, FoodNutrition추가)