@@ -2,12 +2,14 @@ package com.ai.balancelab_be.domain.dietAnalysis.controller;
 
 import com.ai.balancelab_be.domain.dietAnalysis.dto.DietAnalysisRequest;
 import com.ai.balancelab_be.domain.dietAnalysis.dto.DietAnalysisResponse;
+import com.ai.balancelab_be.domain.dietAnalysis.dto.FoodNutrition;
 import com.ai.balancelab_be.domain.dietAnalysis.dto.Nutrition;
 import com.ai.balancelab_be.domain.dietAnalysis.service.DietAnalysisService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.List;
 
 @RestController
@@ -22,64 +24,38 @@ public class DietAnalysisController {
             @RequestParam("message") String message) {
         try {
             System.out.println("컨트롤러 메세지1(컨트롤러에 들어온값): " + message);
+            if (message == null || message.trim().isEmpty()) {
+                System.out.println("컨트롤러 메세지1: 메시지가 비어 있습니다.");
+                return ResponseEntity.badRequest().body(
+                        new DietAnalysisResponse(
+                                Collections.emptyList(),
+                                Collections.emptyList(),
+                                new Nutrition(0, 0, 0, 0, 0, 0, 0),
+                                Collections.emptyList(),
+                                Collections.emptyList()
+                        )
+                );
+            }
+
             DietAnalysisRequest dietAnalysisRequest = new DietAnalysisRequest(message);
             DietAnalysisResponse response = dietAnalysisService.getFoodNameResponse(dietAnalysisRequest);
             System.out.println("컨트롤러 메세지2(서비스에서 넘어온 전체값): " + response);
             System.out.println("컨트롤러 메세지2(foodList): " + response.getFoodList());
+            System.out.println("컨트롤러 메세지2(nutritionPerFood): " + response.getNutritionPerFood());
+            System.out.println("컨트롤러 메세지2(totalNutrition): " + response.getTotalNutrition());
             return ResponseEntity.ok(response);
         } catch (Exception e) {
-            System.err.println("Error: " + e.getMessage());
+            System.err.println("컨트롤러 메세지2: 오류 발생: " + e.getMessage());
+            e.printStackTrace();
             return ResponseEntity.badRequest().body(
-                    new DietAnalysisResponse(List.of(), new Nutrition(0, 0, 0, 0, 0, 0, 0), List.of(), List.of())
+                    new DietAnalysisResponse(
+                            Collections.emptyList(),
+                            Collections.emptyList(),
+                            new Nutrition(0, 0, 0, 0, 0, 0, 0),
+                            Collections.emptyList(),
+                            Collections.emptyList()
+                    )
             );
         }
     }
 }
-
-//-------------------------------------------------------------------------------------------
-//package com.ai.balancelab_be.domain.dietAnalysis.controller;
-//
-//import com.ai.balancelab_be.domain.dietAnalysis.dto.DietAnalysisRequest;
-//import com.ai.balancelab_be.domain.dietAnalysis.service.DietAnalysisService;
-//import lombok.RequiredArgsConstructor;
-//import org.springframework.beans.factory.annotation.Autowired;
-//import org.springframework.http.ResponseEntity;
-//import org.springframework.web.bind.annotation.*;
-//
-//import java.util.List;
-//
-//@RestController
-//@RequiredArgsConstructor
-//@RequestMapping("/diet-analysis")
-//public class DietAnalysisController {
-//
-//    // 서비스는 나중에 추가할 예정이므로 주석 처리
-//    // private final DietAnalysisService dietAnalysisService;
-//
-//    @Autowired
-//    private DietAnalysisService dietAnalysisService;
-//
-//    @PostMapping(value = "/message")
-//    public ResponseEntity<String> receiveDietMessage(
-//            @RequestParam("message") String message) {
-//        try {
-//            // 프론트에서 넘어온 foodText와 userId 확인
-//            DietAnalysisRequest dietAnalysisRequest = new DietAnalysisRequest(message);
-//            List<String> food_list = dietAnalysisService.getFoodNameResponse(dietAnalysisRequest);
-//            // 콘솔에 값 출력 (테스트용)
-//            System.out.println("컨트롤러 메세지1(컨트롤러에 들어온값): " + message);
-//            System.out.println("컨트롤러 메세지2(서비스에서 넘어온값): " + food_list);
-//
-////            DietAnalysisRequest dietAnalysisRequest = new DietAnalysisRequest(message);
-////
-////            List<String> food_list = dietAnalysisService.getFoodNameResponse(dietAnalysisRequest);
-//
-//            // 성공 응답 반환 (테스트용)
-//            String responseMessage = "Diet message received successfully: " + message;
-//            return ResponseEntity.ok(responseMessage);
-//        } catch (Exception e) {
-//            // 예외 발생 시 에러 응답
-//            return ResponseEntity.badRequest().body("Failed to process diet message: " + e.getMessage());
-//        }
-//    }
-//}
